@@ -3,12 +3,14 @@ require 'shooting_star/channel'
 # DRbObject
 module ShootingStar
   class Shooter
-    def shoot(channel, id, tag)
-      return unless Channel[channel]
-      log "Shot: #{channel}:#{id}:#{tag.join(',')}"
-      Channel[channel].transmit(id, :tag => tag)
+    # broadcast message
+    def shoot(channel_path, id, tag)
+      return unless Channel[channel_path]
+      log "Shot: #{channel_path}:#{id}:#{tag.join(',')}"
+      Channel[channel_path].transmit(id, :tag => tag)
     end
 
+    # update client properties
     def update(sig, uid, tag)
       ::ShootingStar::Server[sig].update(uid, tag || [])
     rescue Exception
@@ -18,40 +20,56 @@ module ShootingStar
     def channels; Channel.list end
     def sweep; Channel.sweep end
 
-    def count(channel, tag = nil)
-      servers(channel, tag).size
+    # count up listeners
+    def count(channel_path, tag = nil)
+      servers(channel_path, tag).size
     end
 
-    def count_with(sig, channel, tag = nil)
-      (signatures(channel, tag) | [sig]).size
+    # count up listeners with specified user.
+    def count_with(sig, channel_path, tag = nil)
+      (signatures(channel_path, tag) | [sig]).size
     end
 
-    def listeners(channel, tag = nil)
-      servers(channel, tag).map{|s| s.uid}
+    # lookup listeners
+    def listeners(channel_path, tag = nil)
+      servers(channel_path, tag).map{|s| s.uid}
     end
 
-    def listeners_with(uid, sig, channel, tag = nil)
-      servers(channel, tag).inject([uid]) do |result, server|
+    # lookup listeners with specified user.
+    def listeners_with(uid, sig, channel_path, tag = nil)
+      servers(channel_path, tag).inject([uid]) do |result, server|
         result << server.uid unless server.signature == sig
         result
       end
     end
 
-    def signatures(channel, tag = nil)
-      servers(channel, tag).map{|s| s.signature}
+    # lookup signatures on specified channel.
+    def signatures(channel_path, tag = nil)
+      servers(channel_path, tag).map{|s| s.signature}
     end
 
+    # notification entry point of message execution.
     def executed(sig, id)
       ::ShootingStar::Server[sig].executed(id)
     rescue Exception
     end
 
+    # observe server side events
+    def observe(channel_path, observer)
+      Channel[channel_path].observe(observer)
+    end
+
+    # ignore server side events
+    def ignore(channel_path, observer)
+      Channel[channel_path].ignore(observer)
+    end
+
   private
     def log(*arg, &block) ShootingStar::log(*arg, &block) end
 
-    def servers(channel, tag = nil)
-      return [] unless Channel[channel]
-      result = Channel[channel].waiters.values
+    def servers(channel_path, tag = nil)
+      return [] unless Channel[channel_path]
+      result = Channel[channel_path].waiters.values
       if tag && !tag.empty?
         result = result.select do |server|
           server.tag.empty? || !(server.tag & tag).empty?
